--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -21,3 +21,15 @@ a:hover {
   background-size: cover;
 
 }
+
+.carousel-indicators  .active {
+
+  background-color: #06B6D6;
+}
+
+.carousel-indicators li {
+  width: 12px;
+  height: 12px;
+  border-radius: 100%;
+  background-color: #dddddd;
+}
